# PixForge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  conanfile.txt
.github/: setup.sh
PixForge/: CMakeLists.txt
PixForge/Core/: Core.h
PixForge/Core/Assets/: Assets.cpp  Assets.h  Texture.cpp  Texture.h
PixForge/Core/OPENGLRenderer/: opengl.h
PixForge/Core/Objects/: ColourBox.cpp  ColourBox.h  Manager.h  Object.cpp  Object.h  ObjectManager.cpp  Sprite.cpp  Sprite.h  iObject.h
PixForge/Core/Objects/ColourBox/: ColourBox.h
PixForge/Core/Objects/Sprite/: Sprite.h
PixForge/Core/Render/: Render.h
PixForge/Core/Renderer/: Assets.cpp  Assets.h  Renderer.h  Texture.cpp  Texture.h
PixForge/Core/Renderer/Objects/: ColourBox.cpp  ColourBox.h  Manager.cpp  Manager.h  Object.h  ObjectManager.cpp  ObjectManager.h  Sprite.cpp  Sprite.h
PixForge/Core/Renderer/Objects/ColourBox/: ColourBox.cpp  ColourBox.h
PixForge/Core/Renderer/Objects/Sprite/: Sprite.cpp  Sprite.h
PixForge/Core/Renderer/OpenGL/: opengl.cpp
PixForge/Core/Renderer/SDL/: SDLRenderer.cpp  SDLRenderer.h
PixForge/Core/SDL2Renderere/: sdl.h
PixForge/Core/STL/: File.cpp  File.h  Folder.cpp  Folder.h  STL.cpp  STL.h  STL.hpp  Vec.h  Vector.h  Vector.hpp
PixForge/Core/STL/Convert/: CharInt.h  CharUint.h  IntChar.h  UintChar.h
PixForge/Core/STL/File/: File.cpp  File.h
PixForge/Core/STL/Folder/: Folder.cpp  Folder.h
PixForge/Core/STL/Math/: Mat.h  Mat.hpp  Vec.h  Vec.hpp
PixForge/Core/STL/Vec/: Vec.h
PixForge/Core/STL/Vector/: Vector.h  Vector.hpp
PixForge/Core/Window/: Window.cpp  Window.h
PixForge/Debug/: Benchmark.h  Log.h  Log.hpp
PixForge/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Events.h  Shader.h  Texture.h
PixForge/Engine/Gui/: ImGuiEngine.cpp  ImGuiEngine.h
PixForge/Engine/Renderer/: Renderer.h  iRenderer.h
PixForge/Engine/Renderer/OpenGL/: opengl.h
PixForge/Engine/Renderer/SDL2/: sdl2.h
PixForge/Engine/STL/: CMakeLists.txt
PixForge/Engine/STL/File/: File.cpp  File.h
PixForge/Engine/STL/Folder/: Folder.cpp  Folder.h
PixForge/Engine/STL/Math/: Mat.h  Mat.hpp  Vec.h  Vec.hpp
PixForge/Engine/STL/Vector/: Vector.h  Vector.hpp
PixForge/Engine/Window/: Window.h
PixForge/Forge/: Benchmark.h  CMakeLists.txt  Editor.cpp  Editor.h  Forge.cpp  Forge.h  Gui.h  Log.cpp  Log.h  Main.cpp  Settings.h  Tools.cpp  Tools.h  main.cpp
PixForge/Forge/CoreForge/GUI/: Gui.cpp  Gui.h
PixForge/Forge/CoreForge/GUI/UI/: Manager.cpp  Manager.h  UI.h
PixForge/Forge/CoreForge/GUI/UI/FileExplorer/: FileExplorer.cpp  FileExplorer.h
PixForge/Forge/CoreForge/GUI/UI/Log/: Log.cpp  Log.h
PixForge/Forge/CoreForge/GUI/UI/Objects/: Objects.cpp  Objects.h
PixForge/Forge/CoreForge/GUI/UI/SandboxWindow/: SandboxWindow.h
PixForge/Forge/CoreForge/GUI/UI/TextEditor/: TextEditor.cpp  TextEditor.h
PixForge/Forge/CoreForge/Window/: Window.cpp  Window.h
PixForge/Forge/Forge/: Forge.cpp  Forge.h
PixForge/Forge/GUI/: Gui.cpp  Gui.h  UI.cpp  UI.h
PixForge/Forge/GUI/UI/: FileExplorerUI.cpp  FileExplorerUI.h  LogUI.cpp  LogUI.h  Manager.cpp  Manager.h  ObjectsUI.cpp  ObjectsUI.h  TextEditorUI.cpp  TextEditorUI.h  UI.cpp  UI.h  UiManager.cpp  UiManager.h  iUI.h
PixForge/Forge/GUI/UI/FileExplorer/: FileExplorer.cpp  FileExplorer.h
PixForge/Forge/GUI/UI/Log/: Log.cpp  Log.h
PixForge/Forge/GUI/UI/Objects/: Objects.cpp  Objects.h
PixForge/Forge/GUI/UI/TextEditor/: TextEditor.cpp  TextEditor.h
PixForge/Forge/Gui/: Gui.cpp  Gui.h
PixForge/Forge/Renderer/: Renderer.cpp  Renderer.h
PixForge/Forge/Sandbox/: Sandbox.cpp  Sandbox.h
PixForge/Forge/Tools/: Log.cpp  Log.h  Tools.cpp  Tools.h
PixForge/Forge/Utilities/: Benchmark.h  Log.h
PixForge/Forge/Utilities/Tools/: Log.cpp  Log.h
PixForge/Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
PixForge/Game/Game/: CMakeLists.txt  CONFIG.h  Game.cpp  Game.h  Main.cpp
PixForge/Game/Sandbox/: Sandbox.cpp  Sandbox.h
PixForge/SQL/: init.sql
PixForge/STL/: CMakeLists.txt
PixForge/STL/File/: File.h
PixForge/STL/Folder/: Folder.h
PixForge/STL/Math/: Vec.h
PixForge/STL/SQLite/: SQLite.h
PixForge/STL/Vector/: Vector.hpp
PixForge/Utilities/: CMakeLists.txt
PixForge/Utilities/File/: File.cpp  File.h
PixForge/Utilities/Folder/: Folder.cpp  Folder.h
PixForge/Utilities/Math/: Mat.h  Mat.hpp  Vec.h  Vec.hpp
PixForge/Utilities/STL/File/: File.cpp  File.h
PixForge/Utilities/STL/Folder/: Folder.cpp  Folder.h
PixForge/Utilities/STL/Math/: Mat.hpp
PixForge/Utilities/Vector/: Vector.h  Vector.hpp
PixT/: CMakeLists.txt  Macro.h  Main.cpp
PixT/Assets/: Assets.h  Settings.h
PixT/Core/: Renderer.h  STL.cpp  STL.h  Window.cpp  Window.h
PixT/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  Gui.cpp  Gui.h  Main.cpp  Settings.h  Tools.cpp  Tools.h
PixT/Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
PixT/PixCore/: CMakeLists.txt  PCRenderer.h  PCWindow.cpp  PCWindow.h  PixCore.cpp  PixCore.h
PixT/PixEditor/: CMakeLists.txt  Main.cpp  PixEditor.cpp  PixEditor.h  PixGui.cpp  buildscript.sh
PixT/PixGame/: CMakeLists.txt  Main.cpp  PixGame.cpp  PixGame.h
PixT/PixGame/scripts/: build.bat  build.sh  run.bat  run.sh
PixT/buildScripts/: build.bat  build.sh  run.bat  run.sh
PixWorkshop/: CMakeLists.txt  Main.cpp  Settings.h
PixWorkshop/PixCore/: CMakeLists.txt  PixCore.cpp  PixCore.h
PixWorkshop/PixEditor/: CMakeLists.txt  PixEditor.cpp  PixEditor.h
PixWorkshop/PixGame/: CMakeLists.txt  PixGame.cpp  PixGame.h
